show post details in details.html

--- a/my_blog/templates/index.html
+++ b/my_blog/templates/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %} 
     {% block content %}
         <h3 class="center-align red lighten-3">{{ title }}</h3>
+        {% for post in posts %}
+        <li class="collection-item"><a href="/posts/details/{{post.id}}">{{ post.title }}</a></li>
+        {% endfor %}
     {% endblock %}
